[tool.poetry]
name = "pyworkflow"
version = "0.1.0"
description = ""
authors = ["VICTOR HUGO <victor.oliveira@willbank.com.br>"]

[tool.poetry.dependencies]
python = "^3.9"
pywf = "^0.0.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
